--- a/Receipe Generator/src/components/Cards/Cards.css
+++ b/Receipe Generator/src/components/Cards/Cards.css
@@ -1,11 +1,16 @@
 .card{
-    border: 1px solid black;
     margin: 20px;
     padding: 5px;
     display: flex;
     flex-direction: column;
     align-items:center ;
     width: 300px;
+      box-shadow: 
+    inset -2px 2px hsl(0 0 100% / 1),
+    -20px 20px 40px hsl(0 0 0 / .25) ;
+     background-image: linear-gradient(to bottom left, #e0e4e5, #f2f6f9);
+       border-radius: 2rem;
+
 }
 .card >p , h4{
     margin: 0;
